# pycc

./: .gitignore  .lgtm.yml  .readthedocs.yaml  1q  CODE_OF_CONDUCT.md  CODE_REVIEW.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  test_dipole_ucc.py  test_energy.py  test_gs.py  test_sympy.py
.github/: CONTRIBUTING.md
.github/workflows/: CI-new.yaml  CI.yaml
devtools/: README.md
devtools/conda-envs/: psi.yaml  test_env.yaml
docs/: DERIVATIVES_PLAN_2026-06.md  ENHANCEMENT_PLAN_2026-06.md  Makefile  README.md  REFACTOR_PLAN_2026-06.md  RESUME_9a-ii_lhx1y2.md  RESUME_cc3_response.md  api.rst  cc_gradients_orbital_response.tex  ccresponse_reformulation_plan.md  ccsdt_orbital_response.tex  conf.py  derivints.tex  getting_started.rst  index.rst  make.bat  mp2_2n1_perturbed.tex  requirements.txt  test_timings.tex
docs/archive/: ENHANCEMENT_PLAN_2026-06.md  REFACTOR_PLAN_2026-06.md
pycc/: __init__.py  _typing.py  _version.py  cc_eqs.py  ccdensity.py  ccderiv.py  ccenergy.py  cceom.py  cchbar.py  cclambda.py  ccresponse.py  cctriples.py  ccwfn.py  cideriv.py  ciwfn.py  correlatedderivs.py  cphf.py  density_eqs.py  derivatives.py  device.py  eom_combined.py  exceptions.py  hamiltonian.py  hbar.py  hbar_eqs.py  hfwfn.py  lambda_eqs.py  lasers.py  lccwfn.py  local.py  localcc.py  mpderiv.py  mpwfn.py  ode.py  ode_methods.py  ode_solver.py  polar.py  properties.py  pycc.py  rtcc.py  (+19 more)
pycc/data/: README.md  __init__.py  molecules.py
pycc/pno_cc/: __init__.py  lcchbar.py  lcclambda.py  lccresponse.py  lccwfn.py
pycc/rt/: 1  (+6 more)
(+163 files in other folders)
